# movie-log

./: .gitignore  expr.ipynb  get-version.sh
backend/: .dockerignore  .env.example  Dockerfile.dev  Dockerfile.prod  README.md  build.sh  dev-docker-compose.yaml  dev.Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-entry.sh  expr.ipynb  generate-req.sh  login-docker.sh  prod-docker-compose.yaml  prod.Dockerfile  push.sh  pyproject.toml  requirements.txt  run-local.sh  test-run-prod.sh
backend/app/: app.py  loguru_setup.py  rate_limit.py
backend/app/config/: __init__.py  config.yaml  settings.py
backend/app/llm/: openrouter_client.py
backend/app/llm/prompts/: movie_metadata.py
backend/app/middlewares/: middleware.py
backend/app/responses/: movie_metadata.py  root.py
backend/app/routers/: movie_metadata.py  root.py
backend/app/schemas/: movie_metadata.py  root.py
backend/app/utils/: image.py  openai_utils.py  retry.py
backend/scripts/: build.sh  docker-entry.sh  generate-req.sh  login-docker.sh  push.sh  run-local.sh  test-run-prod.sh
